rgw: fix missing master zone for a single zone zonegroup

Fixes: http://tracker.ceph.com/issues/17364
Signed-off-by: Orit Wasserman <owasserm@redhat.com>
(cherry picked from commit 0870b00c77fb4933399a082df8ffc37e51040820)